// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`range-slider transforms correctly 1`] = `
"import { Slider } from '@vkontakte/vkui';
import React from 'react';
import '@vkontakte/vkui/dist/vkui.css';

const App = () => {
  const props = { id: 'RangeSlider' };
  return (
    <React.Fragment>
      <Slider multiple />
      <Slider multiple {...props} boolValue />
      <Slider multiple test="123" />
      <Slider multiple test="123">inner</Slider>
    </React.Fragment>
  );
};"
`;

exports[`range-slider transforms correctly 2`] = `
"import { Slider, Slider as VKUIRangeSlider } from '@vkontakte/vkui';
import React from 'react';
import '@vkontakte/vkui/dist/vkui.css';

const App = () => {
  const props = { id: 'RangeSlider' };
  return (
    <React.Fragment>
      <VKUIRangeSlider multiple {...props} boolValue />
      <Slider test="123" />
    </React.Fragment>
  );
};"
`;

exports[`range-slider transforms correctly 3`] = `
"import { Slider as VKUIRangeSlider } from '@vkontakte/vkui';
import React from 'react';
import '@vkontakte/vkui/dist/vkui.css';

const App = () => {
  const props = { id: 'RangeSlider' };
  return (
    <React.Fragment>
      <VKUIRangeSlider multiple {...props} boolValue />
    </React.Fragment>
  );
};"
`;
